agrego html,css y js

--- a/ Disney drag and drop/index.html
+++ b/ Disney drag and drop/index.html
@@ -9,20 +9,29 @@
 </head>
 
 <body>
+    <div class="foto">
+        <img name="foto" src="img/bella.png" alt="">
+    </div>
     <div class="empty">
-        <div class="fill" draggable="true"> </div>
+        <div class="fill" draggable="true"> 
+            
+        </div>
     </div>
 
     <div class="empty">
+        <div class="fill2" draggable="true"> </div>
     </div>
 
     <div class="empty">
+        <!-- <div class="fill" draggable="true"> </div> -->
     </div>
 
     <div class="empty">
+        <!-- <div class="fill" draggable="true"> </div> -->
     </div>
 
     <div class="empty">
+        <!-- <div class="fill" draggable="true"> </div> -->
     </div>
     <script src="script.js"></script>
 </body>
